--- a/playbook.yml
+++ b/playbook.yml
@@ -3,7 +3,7 @@
   roles:
     - role: riponbanik.foreman
       foreman_hostname: foreman.vagrantup.com
-      foreman_version: 1.19      
+      foreman_version: "1.19"
       foreman_plugins: 
         - docker
       puppet_options:
